--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sell?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://192.168.2.119/sell?characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
 
