--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
             <version>2.9.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <!-- 第三方SDK 用于支付 -->
+        <dependency>
+            <groupId>cn.springboot</groupId>
+            <artifactId>best-pay-sdk</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
